First try with @media mixin

--- a/adapt/_adapt.scss
+++ b/adapt/_adapt.scss
@@ -5,6 +5,7 @@
 @import "grid/private";
 @import "grid/omega";
 @import "grid/breakpoint";
+@import "grid/media";
 @import "grid/grid-functions";
 @import "grid/grid-mixins";
 
